src/pages/ProjectPage/ProjectPage.css
.ProjectPage > h1 {
  color: black;
  text-decoration: underline;
}

.ProjectPage > p {
  display: grid;
  grid-template-columns: auto auto auto;
  justify-content: center;
}

 .projects {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  place-items: center;
}

.projects > img {
  margin: 2rem 0;
}

p > a {
  padding: 20px;
}

img {
  outline: 4.5px solid black;
}

